--- a/src/App.css
+++ b/src/App.css
@@ -1,15 +1,14 @@
 .header-color {
-    background: #8e9eab; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+    background: #6D6027; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #D3CBB8, #6D6027); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #D3CBB8, #6D6027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
 }
 .landing-grid {
-    background: #8e9eab; /* fallback for old browsers */
-    background: -webkit-linear-gradient(to right, #eef2f3, #8e9eab); /* Chrome 10-25, Safari 5.1-6 */
-    background: linear-gradient(to right, #eef2f3, #8e9eab); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
-    
+    background: #6D6027; /* fallback for old browsers */
+    background: -webkit-linear-gradient(to right, #D3CBB8, #6D6027); /* Chrome 10-25, Safari 5.1-6 */
+    background: linear-gradient(to right, #D3CBB8, #6D6027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
-    position: fixed;
+    position: fixed; /* You need to remove this if you want to add anything in landingpage grid*/
     top: 0;
     left: 0;
     width: 100%;
@@ -17,9 +16,9 @@
 }
 
 .praveen-img {
-    height: 250px;
+    height: 300px;
     padding-top: 5em;
-    transform: rotate(90deg);
+  
 }
 
 .banner-text {
