--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,8 @@
     background: linear-gradient(to right, #D3CBB8, #6D6027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
     text-align: center;
     /* position: absolute;*/  /* You need to remove this if you want to add anything in landingpage grid*/
-   
+   top:0;
+   left:0;
     width: 100%;
     height: 100vh
 }
